updated copyright header

--- a/src/default/menu-tablet-fixer.html.twig
+++ b/src/default/menu-tablet-fixer.html.twig
@@ -6,7 +6,7 @@
 {#            behavior for large touch devices.        #}
 {#            The first tap on a menu with sub items   #}
 {#            expands the menu, while the second       #}
-{#            tap opens the deposited link.            #}
+{#            tap opens the underlying link.           #}
 {#                                                     #}
 {#   Author: Andreas Kar (thex) <andreas.kar@gmx.at>   #}
 {#                                                     #}
